...
    /** Tag for the profile picture of the user who created the offer. */
    const val REQUESTER_PROFILE_PICTURE = "REQUESTER_PROFILE_PICTURE"

    /** Tag for the display name of the user who created the offer. */
    const val REQUESTER_NAME = "REQUESTER_NAME"
    const val SCROLL_BOX = "SCROLL_BOX"
    const val NO_OFFER_TEXT = "NO_OFFER_TEXT"
    const val DISTANCE_FILTER_BUTTON = "DISTANCE_FILTER_BUTTON"
    const val DISTANCE_VALUE_TEXT = "DISTANCE_VALUE_TEXT"
    const val DISTANCE_SLIDER = "DISTANCE_SLIDER"
    const val CLEAR_FILTERS_BUTTON = "CLEAR_FILTERS_BUTTON"

    const val LIVE_LOCATION_CHECKBOX = "LIVE_LOCATION_CHECKBOX"
...
